--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="row strip mb-5">
     <ul class="nav nav-tabs">
-        {% if request.path == "/hot/" %}
+        {% if request.path == "/hot" %}
         <li class="nav-item">
             <a class="nav-link" href="{% url 'index' %}">New Questions</a>
         </li>
