--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,209 +1,247 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
+
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #212529;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #212529;
 }
 
 div.inputTags-list {
-  display: inline-block;
-  width: 100%;
-  padding: 6px;
-  border: 1px solid rgba(25, 188, 156, 0.35);
-  background-color: #f9f9f9;
-  box-shadow: 1px 2px 2px rgba(221, 221, 221, 0.2);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
+    display: inline-block;
+    width: 100%;
+    padding: 6px;
+    border: 1px solid rgba(25, 188, 156, 0.35);
+    background-color: #f9f9f9;
+    box-shadow: 1px 2px 2px rgba(221, 221, 221, 0.2);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
 }
+
 span.inputTags-item {
-  position: relative;
-  display: inline-block;
-  margin: 2px;
-  padding: 3px 8px 4px 8px;
-  background-color: #19BC9C;
-  text-align: center;
+    position: relative;
+    display: inline-block;
+    margin: 2px;
+    padding: 3px 20px 4px 8px;
+    background-color: #19BC9C;
+    text-align: center;font-size: 0.8rem;
+    color: #fff;
+    opacity: 1;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+}
+
+span.inputTags-item-list {
+    position: relative;
+    display: inline-block;
+    margin: 2px;
+    padding: 3px 8px 4px 8px;
+    background-color: #19BC9C;
+    text-align: center;
     font-size: 0.8rem;
-  color: #fff;
-  opacity: 1;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
+    color: #fff;
+    opacity: 1;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
 }
+
 span.inputTags-item.is-edit {
-  display: none;
+    display: none;
 }
+
 span.inputTags-item.is-hidden {
-  display: none !important;
+    display: none !important;
 }
+
 span.inputTags-item.is-exists {
-  background-color: rgba(231, 76, 60, 0.7);
+    background-color: rgba(231, 76, 60, 0.7);
 }
+
 span.inputTags-item span.value {
-  cursor: pointer;
+    cursor: pointer;
 }
+
 span.inputTags-item i {
-  position: absolute;
-  top: 50%;
-  right: 6px;
-  font-size: 20px;
-  cursor: pointer;
-  z-index: 10;
-  font-weight: 400;
-  font-family: sans-serif;
-  line-height: 1;
-  font-style: normal;
-  -webkit-transition: color 0.2s;
-  -khtml-transition: color 0.2s;
-  -moz-transition: color 0.2s;
-  -ms-transition: color 0.2s;
-  -o-transition: color 0.2s;
-  -webkit-transform: translateY(-50%);
-  -khtml-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+    right: 6px;
+    font-size: 20px;
+    cursor: pointer;
+    z-index: 10;
+    font-weight: 400;
+    font-family: sans-serif;
+    line-height: 1;
+    font-style: normal;
+    -webkit-transition: color 0.2s;
+    -khtml-transition: color 0.2s;
+    -moz-transition: color 0.2s;
+    -ms-transition: color 0.2s;
+    -o-transition: color 0.2s;
+    -webkit-transform: translateY(-50%);
+    -khtml-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
 }
+
 div.inputTags-list span.inputTags-item i:hover {
-  color: #e74c3c;
+    color: #e74c3c;
 }
+
 div.inputTags-list input.inputTags-field {
-  border: none;
-  margin-left: 4px;
-  background-color: transparent;
+    border: none;
+    margin-left: 4px;
+    background-color: transparent;
 }
+
 div.inputTags-list input.inputTags-field:focus,
 div.inputTags-list input.inputTags-field:active {
-  outline: none;
+    outline: none;
 }
+
 div.inputTags-list input.inputTags-field.is-edit {
-  margin: 0 2px;
-  padding: 4px 8px 3px 8px;
-  border: 1px dashed #c4c4c4;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
+    margin: 0 2px;
+    padding: 4px 8px 3px 8px;
+    border: 1px dashed #c4c4c4;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
 }
+
 div.inputTags-list ul.inputTags-autocomplete-list {
-  position: absolute;
-  max-height: 192px;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  overflow-y: auto;
-  z-index: 100;
-  opacity: 0;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  -webkit-transform: scaleY(0);
-  -khtml-transform: scaleY(0);
-  -moz-transform: scaleY(0);
-  -ms-transform: scaleY(0);
-  -o-transform: scaleY(0);
-  -webkit-transform-origin: 50% 0;
-  -khtml-transform-origin: 50% 0;
-  -moz-transform-origin: 50% 0;
-  -ms-transform-origin: 50% 0;
-  -o-transform-origin: 50% 0;
-  -webkit-transition-duration: 0.2s;
-  -khtml-transition-duration: 0.2s;
-  -moz-transition-duration: 0.2s;
-  -ms-transition-duration: 0.2s;
-  -o-transition-duration: 0.2s;
+    position: absolute;
+    max-height: 192px;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    overflow-y: auto;
+    z-index: 100;
+    opacity: 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    -webkit-transform: scaleY(0);
+    -khtml-transform: scaleY(0);
+    -moz-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    -o-transform: scaleY(0);
+    -webkit-transform-origin: 50% 0;
+    -khtml-transform-origin: 50% 0;
+    -moz-transform-origin: 50% 0;
+    -ms-transform-origin: 50% 0;
+    -o-transform-origin: 50% 0;
+    -webkit-transition-duration: 0.2s;
+    -khtml-transition-duration: 0.2s;
+    -moz-transition-duration: 0.2s;
+    -ms-transition-duration: 0.2s;
+    -o-transition-duration: 0.2s;
 }
+
 div.inputTags-list ul.inputTags-autocomplete-list.is-active {
-  opacity: 1;
-  -webkit-transform: scaleY(1);
-  -khtml-transform: scaleY(1);
-  -moz-transform: scaleY(1);
-  -ms-transform: scaleY(1);
-  -o-transform: scaleY(1);
+    opacity: 1;
+    -webkit-transform: scaleY(1);
+    -khtml-transform: scaleY(1);
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -o-transform: scaleY(1);
 }
+
 div.inputTags-list ul.inputTags-autocomplete-list li {
-  height: 32px;
-  line-height: 32px;
-  padding: 0 16px;
-  cursor: pointer;
-  border-bottom: 1px solid #ddd;
-  -webkit-transition-duration: 0.3s;
-  -khtml-transition-duration: 0.3s;
-  -moz-transition-duration: 0.3s;
-  -ms-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-  -webkit-transition-duration: 0.2s;
-  -khtml-transition-duration: 0.2s;
-  -moz-transition-duration: 0.2s;
-  -ms-transition-duration: 0.2s;
-  -o-transition-duration: 0.2s;
+    height: 32px;
+    line-height: 32px;
+    padding: 0 16px;
+    cursor: pointer;
+    border-bottom: 1px solid #ddd;
+    -webkit-transition-duration: 0.3s;
+    -khtml-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -ms-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    -webkit-transition-duration: 0.2s;
+    -khtml-transition-duration: 0.2s;
+    -moz-transition-duration: 0.2s;
+    -ms-transition-duration: 0.2s;
+    -o-transition-duration: 0.2s;
 }
+
 div.inputTags-list ul.inputTags-autocomplete-list li:last-child {
-  border: none;
+    border: none;
 }
+
 div.inputTags-list ul.inputTags-autocomplete-list li:hover {
-  background-color: #19BC9C;
-  color: #fff;
+    background-color: #19BC9C;
+    color: #fff;
 }
+
 div.inputTags-list ul.inputTags-autocomplete-list li.is-disabled {
-  cursor: default;
-  background-color: #f7f7f7;
-  color: initial;
+    cursor: default;
+    background-color: #f7f7f7;
+    color: initial;
 }
+
 p.inputTags-error {
-  position: relative;
-  margin: 0;
-  padding: 0.5em 1em;
-  color: #fff;
-  background-color: rgba(231, 76, 60, 0.7);
-  cursor: pointer;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
+    position: relative;
+    margin: 0;
+    padding: 0.5em 1em;
+    color: #fff;
+    background-color: rgba(231, 76, 60, 0.7);
+    cursor: pointer;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
 }
+
 p.inputTags-error:first-of-type {
-  margin-top: 8px;
+    margin-top: 8px;
 }
+
 p.inputTags-error:after {
-  position: absolute;
-  content: "\000D7";
-  top: 50%;
-  right: 0.5em;
-  -webkit-transform: translateY(-50%);
-  -khtml-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  font-size: 28px;
+    position: absolute;
+    content: "\000D7";
+    top: 50%;
+    right: 0.5em;
+    -webkit-transform: translateY(-50%);
+    -khtml-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    font-size: 28px;
 }
 
 /* Custom page CSS
@@ -211,8 +249,8 @@ p.inputTags-error:after {
 /* Not required for template or sticky footer method. */
 
 .footer > .container-fluid {
-  padding-right: 15px;
-  padding-left: 15px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
 .navbar {
@@ -265,7 +303,7 @@ p.inputTags-error:after {
 }
 
 .me-link {
-    color: #000000;    
+    color: #000000;
 }
 
 .me-link.active {
@@ -274,10 +312,10 @@ p.inputTags-error:after {
 }
 
 .main-div {
-   border-width: 0 1px 0 1px;
-   border-style: solid; 
-   padding-right: 10px;
-   
+    border-width: 0 1px 0 1px;
+    border-style: solid;
+    padding-right: 10px;
+
 }
 
 .votes {
@@ -289,7 +327,7 @@ p.inputTags-error:after {
 }
 
 .label-input {
-    #background-color: #ffffff!important;
+    #background-color: #ffffff !important;
 }
 
 .strip {
@@ -304,21 +342,21 @@ p.inputTags-error:after {
 }
 
 .avatar-big {
-  max-width:108px;
-  max-height:108px;
-  width: auto;
-  height: auto;
+    max-width: 108px;
+    max-height: 108px;
+    width: auto;
+    height: auto;
 }
 
 .avatar-sm {
-  max-width:20px;
-  max-height:20px;
-  width: auto;
-  height: auto;
+    max-width: 20px;
+    max-height: 20px;
+    width: auto;
+    height: auto;
 }
 
 .redcolor {
-    color: red!important;
+    color: red !important;
 }
 
 .v-g {
@@ -334,3 +372,10 @@ p.inputTags-error:after {
     width: 40px;
 }
 
+.mr-10 {
+    margin-right: 10px;
+}
+
+.wh {
+    color: #ffffff;
+}
