--- a/templates/500.html
+++ b/templates/500.html
@@ -3,8 +3,8 @@
 <main role="main" class="container-fluid mt-7">
     <div class="row">
         <div class="col text-center">
-            <h1 class="text-center redcolor mb-4">Page not found</h1>
-            <h1>OOPS! LOOKS LIKE YOU FIND ANYTHING SPECIAL, BUT WITHOUT RESULT</h1>
+            <h1 class="text-center redcolor mb-4">500</h1>
+            <h1>Some problems with your query, maybe try later, or not trying ever</h1>
         </div>
     </div>
 </main>
