--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'basetrending.html' %}
 {% block main_content %}
     <form method="POST" action="{% url 'signup' %}" class="form-signin">
         {% csrf_token %}
