--- a/questions/templates/questions/search.html
+++ b/questions/templates/questions/search.html
@@ -1,11 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'basetrending.html' %}
 {% load staticfiles %}
 {% block main_content %}
     <h3 class="text-center">Search results:</h3>
     <hr class="featurette-divider">
-    {% if count == 0 %}
-        <h5 class="text-center">Emprty query - empty results</h5>
-    {% else %}
+    {% if object_list %}
+
         {% for question in object_list %}
 
             <div class="row strip mb-3">
@@ -24,8 +23,8 @@
                     </div>
                     <div class="row">
                         <div class="col col-lg-9 strip">
-                            {% for tag in question.all_tags %}
-                                <a href="/search?query=tag:{{ tag }}">
+                            {% for tag in question.tags.all %}
+                                <a href="{% url 'search' %}?query=tag:{{ tag }}">
                 <span class="inputTags-item">
                 {{ tag }}
                 </span>
@@ -51,8 +50,12 @@
                 </div>
             </div>
             <hr class="featurette-divider">
+
+
         {% endfor %}
 
         {% include 'pages.html' %}
+    {% else %}
+        <h5 class="text-center">No one questions for your query</h5>
     {% endif %}
 {% endblock %}
