--- a/templates/base.html
+++ b/templates/base.html
@@ -16,50 +16,74 @@
 </head>
 
 <body class="bg-light">
-{% include 'header.html' %}
-<main role="main" class="container-fluid mt-7">
-    <div class="row">
-        <div class="col col-lg-8 col-sm-8 col-md-8 main-div" id="middle-context">
-            {% block main_content %}
-
-            {% endblock %}
-        </div>
-        {% if error %}
-        {% else %}
-            <div class="col col-lg-4 col-sm-4 col-md-4 ">
-                {% block right-content %}
-                    {% load cache %}
-                    {% cache 30 rightbar %}
-                        <div class="row strip mb-4">
-                            <a href="{% url 'ask' %}">
-                                <button type="button" class="btn btn-warning" href="ask">Ask question</button>
-                            </a>
-                        </div>
-                        <div class="row strip mb-1">
-                            <h3>Trending</h3>
-                        </div>
-                        {% for question in trend_questions %}
-                            <div class="row strip mb-2">
-                                <div class="col col-lg-1 col-md-2 col-sm-3 votes text-center strip">
-                                    {{ question.rank }}<BR>votes
-                                </div>
-                                <div class="col col-lg-9 col-md-8 col-sm-7">
-                                    <a href="{{ question.get_url }}">
-                                        Q: {{ question.title }}
-                                    </a>
-                                </div>
-
-                            </div>
-                            <hr class="featurette-divider">
-                        {% endfor %}
-                    {% endcache %}
-                {% endblock %}
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <!--button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button-->
+            <div class="col col-lg-3 col-md-3 col-sm-4">
+                <img alt="LOGO" src="{% static '/img/logo_black.png' %}" title="" width="20" height="20"
+                     class="mr-10">
+                <a class="navbar-brand" href={% url 'index' %}>H(ask)->er</a>
             </div>
-        {% endif %}
-    </div>
+            <div class="col">
+                <div class="row">
+                    <form class="form-inline" id="search" action='{% url 'search' %}' method="get" autocomplete="off"
+                          role="search">
+                        <input name="query" type="text" placeholder="Search…" value="{{ search_text }}"
+                               autocomplete="off"
+                               maxlength="240" class="f-input top-search" id="search-field-js"/>
+                        <button type="submit" aria-label="Search..." id="search-btn-js" class="search-btn"
+                                style="display: none;">
+                            <a href="{% url 'search' %}"
+                               onclick="document.getElementById('search').submit(); alert(41);">
+                                <svg aria-hidden="true" class="svg-icon iconSearch" width="18" height="18"
+                                     viewBox="0 0 18 18">
+                                    <path d="M12.86 11.32L18 16.5 16.5 18l-5.18-5.14v-.35a7 7 0 1 1 1.19-1.19h.35zM7 12A5 5 0 1 0 7 2a5 5 0 0 0 0 10z"/>
+                                </svg>
+                            </a>
+                        </button>
+                    </form>
 
-</main>
-{% include 'footer.html' %}
+                </div>
+            </div>
+            <div class="col col-lg-3 col-md-4 col-sm-6">
+                {% if user.is_authenticated %}
+                    <div class="d-flex justify-content-end">
+                        <a href="{% url "profile" %}" class="wh btn btn-dark btn-navbar">
+                            {{ request.user.username }}
+                            <img class="avatar-sm" src="{{ request.user.get_avatar }}">
+                        </a>
+                        <a href="{% url 'logout' %}">
+                            <button type="button" class="btn btn-warning btn-navbar">Log Out</button>
+                        </a>
+                    </div>
+                {% else %}
+                    <div class="d-flex justify-content-end">
+                        <a href="{% url 'login' %}">
+                            <button type="button" class="btn btn-dark btn-navbar">Log In</button>
+                        </a>
+                        <a href="{% url 'signup' %}">
+                            <button type="button" class="btn btn-warning btn-navbar">Sign Up</button>
+                        </a>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
+</header>
+{% block main_body %}
+
+{% endblock %}
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">It's a base question-answer site.
+            Maked for OTUS homework by Dmitry Gordienko.
+            If you have any questions, please
+            <a href="mailto: mail@hasker.site" class="color:#6c757d!important;"> mail me</a></span>
+    </div>
+</footer>
 
 {% block js_include %}
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
